fix AlergiaServiceImplTest